# rails-core

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  codecov.yml  docker-compose.yml  sonar-project.properties
.github/workflows/: ci.yml  (+3 more)
config/: services.json
docs/: RAILWAY_DEPLOYMENT.md  architecture.md  audit-trail-architecture.md  index.html  quickstart.md
gateway/: nginx.conf
postman/: rails-core-example-flow.postman_collection.json
proto/: accounts.proto  ledger.proto  users.proto
scripts/: bootstrap.sh  deploy-railway.sh  health-check.sh  reset.sh  seed.sh  system-test.sh  verify-layout.sh
services/accounts-service/: Cargo.toml  Dockerfile  build.rs  run_migrations.sh
services/accounts-service/.github/workflows/: deploy-dev.yml  deploy-production.yml  deploy-staging.yml
services/accounts-service/migrations/: 20260419120000_add_transaction_posting_status.sql
services/accounts-service/migrations_accounts/: 20260210000001_account_holders_and_holder_id.sql  20260215000001_add_description_to_transactions.sql  20260215000002_add_external_recipient_and_reference_to_transactions.sql  20260216000001_backfill_transactions_environment.sql  20260419120000_add_transaction_posting_status.sql
services/accounts-service/proto/: ledger.proto
services/accounts-service/proto/audit/v1/: audit.proto
services/accounts-service/src/: audit_emit.rs  ledger_grpc.rs  lib.rs  main.rs  users_grpc.rs
services/accounts-service/src/config/: settings.rs
services/accounts-service/src/errors/: app_error.rs
services/accounts-service/src/grpc/: accounts.rs  mod.rs
services/accounts-service/src/handlers/: accounts.rs  health.rs  transactions.rs
services/accounts-service/src/models/: account.rs  account_holder.rs  mod.rs  transaction.rs
services/accounts-service/src/repositories/: account_holder_repository.rs  account_repository.rs  mod.rs  transaction_repository.rs
services/accounts-service/src/routes/: api.rs  mod.rs
services/accounts-service/src/services/: account_service.rs  transaction_retry.rs  transaction_service.rs
services/accounts-service/src/utils/: account_number.rs
services/accounts-service/tests/: audit_emit_e2e.rs  http_money_mutations.rs  postgres_transaction_posting.rs
services/accounts-service/tests/postgres_transaction_posting/: claim_batch.rs  find_by_id.rs  main.rs  process_claimed.rs  try_claim.rs  update_status.rs
services/accounts-service/tests/postgres_transaction_posting/support/: claims.rs  db.rs  fixtures.rs  ledger.rs  mod.rs
services/audit-service/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  railway.toml
services/audit-service/.github/workflows/: deploy-dev.yml  deploy-production.yml  deploy-staging.yml
services/audit-service/migrations/: 20250422120000_create_audit_events.sql
services/audit-service/src/: bootstrap.rs  config.rs  db.rs  grpc_server.rs  lib.rs  main.rs  proto.rs  validate.rs
services/audit-service/src/routes/: health.rs  mod.rs
services/audit-service/tests/: append_persist_e2e.rs
(+88 files in other folders)
