[package]
name = "accounts-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "bigdecimal", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"

# Environment variables
dotenv = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sentry error tracking and performance monitoring
sentry = { version = "0.32", features = ["tracing", "tower"] }
sentry-tracing = "0.32"

# Account number generation with Luhn checksum
luhn3 = "1.1"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
audit_service = { path = "../audit-service" }
# Testing
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
testcontainers = "0.27.3"
tonic = { version = "0.12", features = ["transport"] }
