[package]
name = "audit_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "audit_service"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.32", features = ["tracing", "tower"] }
sentry-tracing = "0.32"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
dotenvy = "0.15.7"
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"
